--- a/promesak/templates/base/party_view.html
+++ b/promesak/templates/base/party_view.html
@@ -3,22 +3,14 @@
 {% block title %}{% trans "Home"%}{% endblock %}
 {% block content %}
 <div class="main" id="index">
-<h1>Hauteskunde aginduak Eibarren</h1>
+<h1>{{party.name}}</h1>
 
-<div id="front-intro" class="center-block well visible-md-block visible-lg-block">
-    <p>
-        Webgune honetan Eibarko Udalerako hautagaiek egindako hauteskunde-aginduak bilduko ditugu
-    </p>
-</div>
 
     <div class="table-responsive">
         <table class="table table-stripped">
             <thead>
                 <th>
                     #
-                </th>
-                <th>
-                    Alderdia
                 </th>
                 <th>
                     Agindua
@@ -32,11 +24,6 @@
                 <tr>
                     <td>
                         {{forloop.counter}}
-                    </td>
-                    <td>
-                        <a href="{% url 'party_view' promise.party.slug %}">
-                            {{promise.party.name}}
-                        </a>
                     </td>
                     <td>
                         <a href="{% url 'promise_view' promise.slug %}">
