--- a/promesak/templates/base/promise_view.html
+++ b/promesak/templates/base/promise_view.html
@@ -3,39 +3,52 @@
 {% block title %}{% trans "Home"%}{% endblock %}
 {% block content %}
 <div class="main" id="index">
-<h1>{{promise.title}}</h1>
-
-{{promise.promised_date}}
+    <h1>{{promise.title}}</h1>
+    {{promise.promised_date}}
 
 {{promise.text|safe}}
 
 {{promise.source_promise_url}}
+    <div class="row">
+        <div class="col-md-8">
+            <div id="comments">
+                <h2>Eman zure iritzia agindutako honen inguruan</h2>
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    /* * * CONFIGURATION VARIABLES * * */
+                    var disqus_shortname = 'aginduakeibarorg';
 
-<div id="comments">
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'aginduakeibarorg';
+                    /* * * DON'T EDIT BELOW THIS LINE * * */
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>
+                    Please enable JavaScript to view the
+                    <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+                </noscript>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2>{{promise.party.name}}</h2>
+            <img src="{{promise.party.logo.url}}" width="300" height="150"/>
+            <h3>Hautagai-zerrenda</h3>
+            {{promise.party.candidates|linebreaks}}
+            <hr />
+            {{promise.party.text|safe}}
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-</div>
-
-<div id="fulfillment">
-    <h2>{% trans "Fulfillment" %}</h2>
-{% if promise.fulfilled %}
+        </div>
+    </div>
+    <div id="fulfillment">
+        <h2>Agindutakoa betetzea</h2>
+        {% if promise.fulfilled %}
     {{promise.fulfillment_date}}
-    <br />
-    {{promise.fulfillment_proof}}
+        <br />
+        {{promise.fulfillment_proof}}
 {% else %}
-    <span class="glyphicon glyphicon-remove" />
-{% endif %}
-</div>
-
-{% endblock %}
+        <span class="glyphicon glyphicon-remove" />
+        {% endif %}
+    </div>
+    {% endblock %}
