--- a/promesak/templates/base.html
+++ b/promesak/templates/base.html
@@ -67,7 +67,7 @@
             <div id="footer" class="row">
               <div id="footercontent" class="container-fluid">
                 <div class="col-md-12">
-                    <a class="go-to-top pull-right" href="#top">{%trans "go to top"%} <span class="glyphicon glyphicon-chevron-up"></span></a>
+                    <a class="go-to-top pull-right" href="#top">gora joan <span class="glyphicon glyphicon-chevron-up"></span></a>
                 </div>
               </div>
             </div>
