--- a/promesak/templates/base/index.html
+++ b/promesak/templates/base/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}{% trans "Home"%}{% endblock %}
+{% block title %}Sarrera - aginduak.eibar.org{% endblock %}
 {% block content %}
 <div class="main" id="index">
     <h1>Hauteskunde aginduak Eibarren</h1>
