--- a/promesak/templates/base/promise_view.html
+++ b/promesak/templates/base/promise_view.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}{% trans "Home"%}{% endblock %}
+{% block title %}{{promise.title}} - {{promise.party.name}} - aginduak.eibar.org{% endblock %}
 {% block content %}
 <div class="main" id="index">
     <div class="row">
