--- a/promesak/templates/base/party_view.html
+++ b/promesak/templates/base/party_view.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}{% trans "Home"%}{% endblock %}
+{% block title %}{{party.name}} - aginduak.eibar.org{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-md-8">
